# rknncli

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  SKILLS.md  pyproject.toml  pytest.ini
.github/workflows/: ci-cd.yml  release.yml  test.yml
rknncli/: __init__.py  _version.py  cli.py  fb_parser.py  graph.py  metadata.py  parser.py  visualizer.py
rknncli/schema/rknn/: Graph.py  Model.py  Node.py  Tensor.py  Type1.py  Type2.py  Type3.py
schemas/: README.md  generate_schema.sh  rknn.fbs
schemas/rknn/: Graph.py  Model.py  Node.py  Tensor.py  Type1.py  Type2.py
scripts/: upload_to_pypi.sh
src/: rknn.fbs
tests/: test_cli.py  test_parser.py
