[project]
name = "rknncli"
version = "0.3.1"
description = "A command line tool for parsing and displaying RKNN model information"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "rknncli"},
]
maintainers = [
    {name = "rknncli"},
]
keywords = ["rknn", "rockchip", "neural network", "model parser", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "flatbuffers",
    "graphviz",
    "click",
    "tomli >= 1.0.0 ; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "build",
    "twine",
    "setuptools-scm",
]

[project.scripts]
rknncli = "rknncli.cli:main"

[project.urls]
Homepage = "https://github.com/hebangwen/rknncli"
Repository = "https://github.com/hebangwen/rknncli"
Documentation = "https://github.com/hebangwen/rknncli#readme"
Issues = "https://github.com/hebangwen/rknncli/issues"

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rknncli*"]

[tool.setuptools_scm]
write_to = "rknncli/_version.py"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
